--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,11 +1,23 @@
 @import 'tailwindcss';
 
-@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
-@source '../../storage/framework/views/*.php';
-@source '../**/*.blade.php';
-@source '../**/*.js';
 
-@theme {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-        'Segoe UI Symbol', 'Noto Color Emoji';
-}
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Nunito', sans-serif;
+  }
+
+  body {
+    font-family: 'Poppins', sans-serif;
+  }
+
+  .bg-gradient-custom {
+    background: linear-gradient(to bottom, #a1d6e2, #85cdc2, #aed6d7, #d0d5b9, #d6d5b4, #f2d59c, #f3ce9d, #f7b5a1);
+  }
+
+  .container-bg {
+    max-width: 600px;
+  }
+
+  .submit-btn{
+    background-color: #b7dee8;
+    width: 200px;
+  }
