--- a/public/css/edit_profile.css
+++ b/public/css/edit_profile.css
@@ -3,9 +3,22 @@
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+    z-index: 1;
+    margin-top: 100px;
+    margin-bottom: 100px;
   }
 
   .save-btn{
     background-color: #f7b5a1;
     width: 200px;
+  }
+
+  .name-container {
+    z-index: 10;
+}
+
+.edit-text {
+    text-align: right;
+    padding-right: 100px;
+   font-size: 18px;
   }
