[BE/user_management]  UI Additions: -create_user.css -edit_user.css -create_user.blade.php -edit_user.blade.css BE Additions: -edit user info -add user

--- a/public/css/user_management.css
+++ b/public/css/user_management.css
@@ -1,6 +1,15 @@
 .user-manage-container {
 width: 100%;
-max-width: 800px;
+max-width: 1000px;
 margin-top: 100px;
 margin-bottom: 100px;
+}
+
+.add-user-btn {
+    background-color: #f7b5a1;
+}
+
+.manage-user-btn {
+    background-color: #3e8bac;
+    width: 100px;
 }
