--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -17,12 +17,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .logo-img {
-    margin: 0;
-    padding: 0;
     display: block;
-    max-height: 100%;
+    max-height: auto;
+    max-width: 100%;
     height: 50px;
+    object-fit: contain;
 }
+
 
 .nav-link {
     font-weight: 500;
